[gd_scene load_steps=5 format=2]

[ext_resource path="res://Rooms/Parent_room.gd" type="Script" id=1]
[ext_resource path="res://fonts/Mine_craft_dynamic.tres" type="DynamicFont" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Day_to_night"
length = 120.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 40 ),
"transitions": PoolRealArray( 1, 3.13834 ),
"update": 0,
"values": [ Color( 0.243137, 0.243137, 0.243137, 1 ), Color( 1, 0.721569, 0.4, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.243137, 0.243137, 0.243137, 1 ) ]
}

[node name="Total_room" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.243137, 0.243137, 0.243137, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="Current_scene" type="Node2D" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 602.0
mouse_filter = 2

[node name="Upper" type="HBoxContainer" parent="Control"]
margin_left = 393.0
margin_right = 1023.0
margin_bottom = 92.0

[node name="Dateandday" type="HBoxContainer" parent="Control/Upper"]
margin_right = 630.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="Date" type="HBoxContainer" parent="Control/Upper/Dateandday"]
margin_right = 207.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/Upper/Dateandday/Date"]
unique_name_in_owner = true
margin_right = 207.0
margin_bottom = 92.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Date:"
valign = 1

[node name="Day" type="HBoxContainer" parent="Control/Upper/Dateandday"]
margin_left = 211.0
margin_right = 418.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Control/Upper/Dateandday/Day"]
unique_name_in_owner = true
margin_right = 207.0
margin_bottom = 92.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Day:"
valign = 1

[node name="Time" type="HBoxContainer" parent="Control/Upper/Dateandday"]
margin_left = 422.0
margin_right = 630.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="Control/Upper/Dateandday/Time"]
unique_name_in_owner = true
margin_right = 208.0
margin_bottom = 92.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Time:"
valign = 1

[node name="Lower" type="HBoxContainer" parent="Control"]
margin_left = 1.0
margin_top = 559.0
margin_right = 1023.0
margin_bottom = 598.0

[node name="Scenes" type="HBoxContainer" parent="Control/Lower"]
margin_right = 1022.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="Development" type="Button" parent="Control/Lower/Scenes" groups=["Scene_button"]]
margin_right = 216.0
margin_bottom = 39.0
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/hseparation = 8
custom_fonts/font = ExtResource( 2 )
text = "Development"

[node name="Marketing" type="Button" parent="Control/Lower/Scenes" groups=["Scene_button"]]
margin_left = 220.0
margin_right = 417.0
margin_bottom = 39.0
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/hseparation = 8
custom_fonts/font = ExtResource( 2 )
text = "Marketing"

[node name="Testing" type="Button" parent="Control/Lower/Scenes" groups=["Scene_button"]]
margin_left = 421.0
margin_right = 619.0
margin_bottom = 39.0
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/hseparation = 8
custom_fonts/font = ExtResource( 2 )
text = "Testing "

[node name="Hr" type="Button" parent="Control/Lower/Scenes" groups=["Scene_button"]]
margin_left = 623.0
margin_right = 820.0
margin_bottom = 39.0
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/hseparation = 8
custom_fonts/font = ExtResource( 2 )
text = "HR"

[node name="Board" type="Button" parent="Control/Lower/Scenes" groups=["Scene_button"]]
margin_left = 824.0
margin_right = 1022.0
margin_bottom = 39.0
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/hseparation = 8
custom_fonts/font = ExtResource( 2 )
text = "Board "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Day_to_night"
anims/Day_to_night = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
